K8S/Tidb/tidb_yaml/nodeport-mon.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-dashboard
  namespace: mycluster
spec:
  ports:
  - name: dashboard
    port: 10262
    protocol: TCP
    targetPort: 10262
  type: NodePort
  selector:
    app.kubernetes.io/component: discovery
    app.kubernetes.io/instance: mycluster
    app.kubernetes.io/name: mycluster-cluster
